[package]
name = "base_task"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]

sched-fifo = []
sched-rr = []
sched-cfs = []

[dependencies]
cfg-if = "1.0"
log = "0.4"
hal = { workspace = true }
config = { workspace = true }
memory_addr = { version = "0.4" }
scheduler = { workspace = true }
crossbeam = { version = "0.8", default-features = false }
