[package]
name = "task_inner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true


[features]
default = ["multitask"]

irq = []
tls = []
preempt = ["irq"]
smp = []

multitask = []
sched_fifo = ["multitask"]
sched_rr = ["multitask", "preempt"]
sched_cfs = ["multitask", "preempt"]

# This feature is used out of the libvsched to control the alloc operation.
alloc = []

[dependencies]
memory_addr = { version = "0.4" }
hal = { workspace = true }
lazyinit = { version = "0.2" }
crate_interface = { version = "0.1" }
cpumask = { version = "0.1" }
scheduler = { workspace = true }
config = { workspace = true }
crossbeam = { version = "0.8", default-features = false }
