[package]
name = "user_test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
libc = "0.2"
memmap = "0.7"
config = { workspace = true }
