[package]
name = "user_test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
preempt = []
irq = []

[dependencies]
libc = "0.2"
config = { workspace = true }
base_task = { workspace = true }
utils = { workspace = true }
memmap2 = "0.9.5"
libloading = "0.8"
